2.1.0/_sources/gallery/axes_grid1/simple_colorbar.rst.txt


.. _sphx_glr_gallery_axes_grid1_simple_colorbar.py:


===============
Simple Colorbar
===============





.. image:: /gallery/axes_grid1/images/sphx_glr_simple_colorbar_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    from mpl_toolkits.axes_grid1 import make_axes_locatable
    import numpy as np

    ax = plt.subplot(111)
    im = ax.imshow(np.arange(100).reshape((10, 10)))

    # create an axes on the right side of ax. The width of cax will be 5%
    # of ax and the padding between cax and ax will be fixed at 0.05 inch.
    divider = make_axes_locatable(ax)
    cax = divider.append_axes("right", size="5%", pad=0.05)

    plt.colorbar(im, cax=cax)

**Total running time of the script:** ( 0 minutes  0.037 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_colorbar.py <simple_colorbar.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_colorbar.ipynb <simple_colorbar.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
